# EDUstell

./: .dockerignore  .env.example  Cargo.toml  Dockerfile.api  Dockerfile.web  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: api.rs  app.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  router.rs  state.rs  telemetry.rs
apps/api/src/extractors/: current_user.rs  mod.rs  request_context.rs  validated_json.rs
apps/api/src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  panic_boundary.rs  rate_limit.rs  request_id.rs  security_headers.rs
apps/api/src/routes/: auth.rs  contributions.rs  credential_pages.rs  credentials.rs  dto.rs  health.rs  mod.rs  notifications.rs  observability.rs  payouts.rs  scholarships.rs  schools.rs
apps/api/tests/: api_flows.rs
apps/api/tests/common/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: audit.rs  auth.rs  blockchain.rs  contributions.rs  credentials.rs  kyc.rs  lib.rs  notifications.rs  payouts.rs  ports.rs  repos.rs  savings.rs  scholarships.rs  schools.rs  tx.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  contributions.rs  lib.rs  payouts.rs  persistence.rs  scholarships.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  notifications.rs  testing.rs
crates/infrastructure/src/auth/: hasher.rs  jwt.rs  mod.rs  repo.rs
crates/infrastructure/src/db/: migrations.rs  pool.rs
crates/infrastructure/src/persistence/: repos.rs
crates/infrastructure/tests/: repositories.rs
crates/shared/: Cargo.toml
crates/shared/src/: currency.rs  error_codes.rs  ids.rs  lib.rs  money.rs  pagination.rs
docs/: api.md  architecture.md  credentials.md  deployment.md  domain.md  environment.md  observability.md  persistence.md  security.md  testing.md
migrations/: 0001_init.sql  0002_auth.sql  0003_education_core.sql  0004_compliance_scholarships_notifications.sql  0005_contribution_ledger.sql  0006_school_payouts.sql  0007_blockchain_refs.sql  0008_scholarship_backend.sql  0009_notification_preferences.sql  0010_audit_observability.sql  0011_payout_idempotency.sql  0012_achievement_credentials.sql
scripts/: migrate-check.sh  migrate.sh  seed-local.sh  seed_local.sql  test-ci.sh  test-contracts.sh  test-frontend.sh  test-integration.sh  test-unit.sh
