[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
application = { path = "../../crates/application" }
domain = { path = "../../crates/domain" }
infrastructure = { path = "../../crates/infrastructure" }
shared = { path = "../../crates/shared" }
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
