[package]
name = "application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
blockchain = { path = "../blockchain" }
chrono.workspace = true
domain = { path = "../domain" }
serde_json.workspace = true
sha2.workspace = true
shared = { path = "../shared" }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
