[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
application = { path = "../application" }
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
domain = { path = "../domain" }
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
